--- a/src/components/work_experience_screen/WorkExperienceScreen.css
+++ b/src/components/work_experience_screen/WorkExperienceScreen.css
@@ -1,14 +1,9 @@
 
 .work-experience-screen {
     display: flex;
-    position: absolute;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    aspect-ratio: 20/9;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     text-align: left;
     gap: 1rem;
 
@@ -177,7 +172,7 @@
 }
 
 .period {
-    z-index: -2;
+    z-index: -1;
     background: lightblue;
     height: 10px;
     width: 10px;
@@ -241,8 +236,7 @@
 .work-description-container {
     pointer-events: none;
     left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0);
     width: 800px;
     height: 400px;
     overflow: hidden;
