--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,8 @@ body {
 
   @media screen and (max-width: 600px) {
     height: 100dvh;
-    width: 98dvw;
+
+
   }
 }
 
@@ -125,7 +126,9 @@ body {
 .bg-mobile {
   position: fixed;
   z-index: -1;
-  scale: 1.2;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1.7, 1.5);
   max-width: 100dvw;
 }
 
