--- a/src/components/about_me/AboutMeScreen.css
+++ b/src/components/about_me/AboutMeScreen.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     text-align: left;
+    max-width: 90dvw;
 }
 
 .aboutme {
@@ -37,7 +38,7 @@
     max-width: 25vw;
     align-items: center;
     @media screen and (max-width: 800px) {
-        max-width: 90vw;
+        max-width: 80vw;
     }
 
 }
