--- a/src/App.css
+++ b/src/App.css
@@ -22,13 +22,12 @@ body {
   background: url("bg.png");
   background-size: cover;
   z-index: -1;
-  filter: blur(5px);
+  filter: hue-rotate(270deg) blur(5px);
 }
 
 
 .hidden {
   display: none;
-
   scale: 0;
 }
 
