--- a/src/components/projects_screen/ProjectsScreen.css
+++ b/src/components/projects_screen/ProjectsScreen.css
@@ -12,6 +12,7 @@
     flex-direction: column;
     align-items: center;
     @media screen and (max-width: 600px) {
+        max-width: calc(100dvw - 20px);
     }
 
 }
